Support bind function
